// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot tests renders component correctly if we provide efficient props 1`] = `
<div
  class="volume"
>
  <button
    class="button-toggler"
  >
    <img
      alt="volume min"
      class="button-toggler__img"
      src="~/assets/img/btn_volume_min.png"
      style="display: none;"
    />
     
    <img
      alt="volume normal"
      class="button-toggler__img"
      src="~/assets/img/btn_volume_normal.png"
    />
  </button>
   
  <div
    class="volume__slider slider"
    style="display: none;"
  >
    <baseplayerslider-stub
      direction="vertical"
      valuebuffered="0"
      valuecurrent="0.66"
    />
  </div>
</div>
`;

exports[`snapshot tests renders component correctly if we provide efficient props and is zero 1`] = `
<div
  class="volume"
>
  <button
    class="button-toggler mute"
  >
    <img
      alt="volume min"
      class="button-toggler__img"
      src="~/assets/img/btn_volume_min.png"
    />
     
    <img
      alt="volume normal"
      class="button-toggler__img"
      src="~/assets/img/btn_volume_normal.png"
      style="display: none;"
    />
  </button>
   
  <div
    class="volume__slider slider"
    style="display: none;"
  >
    <baseplayerslider-stub
      direction="vertical"
      valuebuffered="0"
      valuecurrent="0"
    />
  </div>
</div>
`;
